@@ -9,7 +9,9 @@ $:.unshift File.expand_path('../../lib', __FILE__)
 FIXTURES = File.expand_path('../fixtures/', __FILE__)
 $TESTING = true
 
-RUBYCOCOA_ROOT = File.expand_path(File.dirname(__FILE__))
+require 'pathname'
+RUBYCOCOA_ROOT = Pathname.new(File.expand_path(File.dirname(__FILE__)))
+TMP_PATH = File.expand_path('../../tmp/', __FILE__)
 
 require 'rucola/rucola_support'
 require 'rucola/test_helper'
